# ptbxl5d

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_eda_baseline.ipynb  02_embedding_aggregation.ipynb
src/: autoencoder.py
